Remove Play CDN & add Tailwind via CLI.

--- a/views/dashboard/password.ejs
+++ b/views/dashboard/password.ejs
@@ -3,9 +3,10 @@
 <head>
     <title>Password - Ghosler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/styles/style.css" rel="stylesheet"/>
 </head>
-<body class="bg-gray-900 text-gray-300 font-sans flex flex-col min-h-screen font-serif">
+
+<body class="bg-gray-900 text-gray-300 flex flex-col min-h-screen font-serif">
 
 <%- include('../partials/common/header.ejs') %>
 
@@ -42,8 +43,10 @@
         </div>
 
         <div class="flex justify-center">
-            <input type="submit" value="Save Changes"
-                   class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
+            <button type="submit"
+                    class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded">
+                Save Changes
+            </button>
         </div>
     </form>
 </main>
