--- a/views/dashboard/settings.ejs
+++ b/views/dashboard/settings.ejs
@@ -3,7 +3,7 @@
 <head>
     <title>Settings - Ghosler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/styles/style.css" rel="stylesheet"/>
     <script>
         function integrationIdFromAdminKey(secondID) {
             const lastTwo = secondID.slice(-2);
@@ -96,7 +96,8 @@
         };
     </script>
 </head>
-<body class="bg-gray-900 text-gray-300 font-sans flex flex-col min-h-screen font-serif">
+
+<body class="bg-gray-900 text-gray-300 flex flex-col min-h-screen font-serif">
 
 <%- include('../partials/common/header.ejs') %>
 
