--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,14 +3,15 @@
 <head>
     <title>Home - Ghosler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-
+    <link href="/styles/style.css" rel="stylesheet"/>
 </head>
-<body class="bg-gray-900 text-gray-300 font-sans flex flex-col min-h-screen font-serif">
+
+<body class="bg-gray-900 text-gray-300 flex flex-col min-h-screen font-serif">
 
 <%- include('./partials/common/header.ejs') %>
 
 <main class="container mx-auto p-6 flex-grow">
+
     <%- include('./partials/common/message.ejs') %>
 
     <!-- Card Sections -->
