--- a/views/partials/settings/profile.ejs
+++ b/views/partials/settings/profile.ejs
@@ -10,8 +10,8 @@
 
     <div id="ghoslerSettings" class="mt-4" style="display: none;">
         <div class="mb-4">
-            <label class="block text-gray-300 font-bold mb-2">Username</label>
-            <input type="text" value="<%= configs.ghosler.auth.user; %>" name="ghosler.auth.user"
+            <label for="ghosler.auth.user" class="block text-gray-300 font-bold mb-2">Username</label>
+            <input type="text" value="<%= configs.ghosler.auth.user; %>" id="ghosler.auth.user" name="ghosler.auth.user"
                    class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline bg-gray-700 text-white">
         </div>
 
