--- a/views/dashboard/details.ejs
+++ b/views/dashboard/details.ejs
@@ -3,7 +3,7 @@
 <head>
     <title>Details - Ghosler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/styles/style.css" rel="stylesheet"/>
     <script>
         window.onload = function () {
             const sentiment = '<%= parseInt(postSentiments.sentiment) ?? 'N/A'; %>';
@@ -26,7 +26,8 @@
         };
     </script>
 </head>
-<body class="bg-gray-900 text-gray-300 font-sans flex flex-col min-h-screen font-serif">
+
+<body class="bg-gray-900 text-gray-300 flex flex-col min-h-screen font-serif">
 
 <%- include('../partials/common/header.ejs') %>
 
@@ -174,5 +175,6 @@
     });
     <% } %>
 </script>
+
 </body>
 </html>
