--- a/views/dashboard/logs.ejs
+++ b/views/dashboard/logs.ejs
@@ -3,9 +3,10 @@
 <head>
     <title>Logs - Ghosler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/styles/style.css" rel="stylesheet"/>
 </head>
-<body class="bg-gray-900 text-gray-300 font-sans flex flex-col min-h-screen font-serif">
+
+<body class="bg-gray-900 text-gray-300 flex flex-col min-h-screen font-serif">
 
 <%- include('../partials/common/header.ejs') %>
 
