--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <title>Login - Ghosler</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="/styles/style.css" rel="stylesheet"/>
 </head>
-<body class="bg-gray-900 text-gray-300 font-serif flex flex-col min-h-screen">
+
+<body class="bg-gray-900 text-gray-300 flex flex-col min-h-screen font-serif">
 
 <%- include('./partials/common/header.ejs', {showLogout: false}) %>
 
 <main class="container mx-auto p-6 flex-grow">
+
     <%- include('./partials/common/message.ejs') %>
 
     <div class="max-w-sm mx-auto bg-gray-800 rounded-lg shadow-md p-8">
@@ -19,13 +20,13 @@
 
         <form action="/login" method="post">
             <div class="mb-4">
-                <label class="block text-gray-300 font-bold mb-2" for="username">Username</label>
+                <label for="username" class="block text-gray-300 font-bold mb-2">Username</label>
                 <input type="text" id="username" name="username" required
                        class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline bg-gray-700 text-white">
             </div>
 
             <div class="mb-8">
-                <label class="block text-gray-300 font-bold mb-2" for="password">Password</label>
+                <label for="password" class="block text-gray-300 font-bold mb-2">Password</label>
                 <input type="password" id="password" name="password" required
                        class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 leading-tight focus:outline-none focus:shadow-outline bg-gray-700 text-white">
             </div>
