--- a/views/partials/settings/customise.ejs
+++ b/views/partials/settings/customise.ejs
@@ -11,122 +11,108 @@
     <div id="newsletterSettings" class="mt-4" style="display: none;">
         <!-- Center Title Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.center_title"
-                <% if (Boolean(configs.newsletter.center_title)) { %> checked
-                        <% } %>
-                >
-                Center Title
-            </label>
+            <label for="newsletter.center_title" class="flex items-center text-gray-300">Center Title</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.center_title" name="newsletter.center_title"
+            <% if (Boolean(configs.newsletter.center_title)) { %> checked
+                    <% } %>
+            >
         </div>
 
         <!-- Track URL Clicks Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.track_links"
-                <% if (Boolean(configs.newsletter.track_links)) { %> checked
-                        <% } %>
-                >
-                Track URL Clicks
-            </label>
+            <label for="newsletter.track_links" class="flex items-center text-gray-300">Track URL Clicks</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.track_links" name="newsletter.track_links"
+            <% if (Boolean(configs.newsletter.track_links)) { %> checked
+                    <% } %>
+            >
             <a href="https://github.com/itznotabug/ghosler/pull/8" target="_blank"
                class="text-xs text-blue-400 hover:text-blue-500">See what URLs are tracked</a>
         </div>
 
         <!-- Show Feedback Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.show_feedback"
-                <% if (Boolean(configs.newsletter.show_feedback)) { %> checked
-                        <% } %>
-                >
-                Show Feedback
-            </label>
+            <label for="newsletter.show_feedback" class="flex items-center text-gray-300">Show Feedback</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.show_feedback" name="newsletter.show_feedback"
+            <% if (Boolean(configs.newsletter.show_feedback)) { %> checked
+                    <% } %>
+            >
         </div>
 
         <!-- Show Comments Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.show_comments"
-                <% if (Boolean(configs.newsletter.show_comments)) { %> checked
-                        <% } %>
-                >
-                Show Comments
-            </label>
+            <label for="newsletter.show_comments" class="flex items-center text-gray-300">Show Comments</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.show_comments" name="newsletter.show_comments"
+            <% if (Boolean(configs.newsletter.show_comments)) { %> checked
+                    <% } %>
+            >
         </div>
 
         <!-- Show Latest Posts Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.show_latest_posts"
-                <% if (Boolean(configs.newsletter.show_latest_posts)) { %> checked
-                        <% } %>
-                >
-                Show Latest Posts
-            </label>
+            <label for="newsletter.show_latest_posts" class="flex items-center text-gray-300">Show Latest Posts</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.show_latest_posts" name="newsletter.show_latest_posts"
+            <% if (Boolean(configs.newsletter.show_latest_posts)) { %> checked
+                    <% } %>
+            >
         </div>
 
         <!-- Show Subscription Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.show_subscription"
-                <% if (Boolean(configs.newsletter.show_subscription)) { %> checked
-                        <% } %>
-                >
-                Show Subscription
-            </label>
+            <label for="newsletter.show_subscription" class="flex items-center text-gray-300">Show Subscription</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.show_subscription" name="newsletter.show_subscription"
+            <% if (Boolean(configs.newsletter.show_subscription)) { %> checked
+                    <% } %>
+            >
         </div>
 
         <!-- Show Featured Image Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.show_featured_image"
-                <% if (Boolean(configs.newsletter.show_featured_image)) { %> checked
-                        <% } %>
-                >
-                Show Featured Image
-            </label>
+            <label for="newsletter.show_featured_image" class="flex items-center text-gray-300">Show Featured
+                Image</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.show_featured_image" name="newsletter.show_featured_image"
+            <% if (Boolean(configs.newsletter.show_featured_image)) { %> checked
+                    <% } %>
+            >
         </div>
 
         <!-- Show 'Powered by Ghost' Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.show_powered_by_ghost"
-                <% if (Boolean(configs.newsletter.show_powered_by_ghost)) { %> checked
-                        <% } %>
-                >
-                Show 'Powered by Ghost'
-            </label>
+            <label for="newsletter.show_powered_by_ghost" class="flex items-center text-gray-300">Show 'Powered by
+                Ghost'</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.show_powered_by_ghost" name="newsletter.show_powered_by_ghost"
+            <% if (Boolean(configs.newsletter.show_powered_by_ghost)) { %> checked
+                    <% } %>
+            >
         </div>
 
         <!-- Show 'Newsletter delivered using Ghosler' Checkbox -->
         <div class="form-group mb-4">
-            <label class="flex items-center text-gray-300">
-                <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
-                       name="newsletter.show_powered_by_ghosler"
-                <% if (Boolean(configs.newsletter.show_powered_by_ghosler)) { %> checked
-                        <% } %>
-                >
-                Show 'Newsletter delivered using Ghosler'
-            </label>
+            <label for="newsletter.show_powered_by_ghosler" class="flex items-center text-gray-300">Show 'Newsletter
+                delivered using Ghosler'</label>
+            <input type="checkbox" class="form-checkbox h-4 w-4 text-blue-600 rounded border-gray-600 mr-2"
+                   id="newsletter.show_powered_by_ghosler" name="newsletter.show_powered_by_ghosler"
+            <% if (Boolean(configs.newsletter.show_powered_by_ghosler)) { %> checked
+                    <% } %>
+            >
         </div>
 
         <!-- Footer Content Textarea -->
         <div class="form-group mb-4">
-            <label class="block text-gray-300 font-bold mb-2">Footer Content</label>
-            <textarea name="newsletter.footer_content"
+            <label for="newsletter.footer_content" class="block text-gray-300 font-bold mb-2">Footer Content</label>
+            <textarea id="newsletter.footer_content" name="newsletter.footer_content"
                       class="bg-gray-700 text-white rounded border border-gray-600 w-full py-2 px-3 min-h-40"><%= configs.newsletter.footer_content; %></textarea>
         </div>
 
         <p class="text-gray-400 mb-4">Note: Save Changes before Preview</p>
+
         <button type="button" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
                 onclick="parent.open('/preview', '_blank')">Preview
         </button>
