--- a/views/partials/settings/mail.ejs
+++ b/views/partials/settings/mail.ejs
@@ -24,44 +24,53 @@
 
                     <div id="mailConfigInner<%= index; %>" class="mt-4" style="display: none;">
                         <div class="form-group mb-4">
-                            <label class="block text-gray-300 mb-1">Reply To</label>
+                            <label for="email[<%= index; %>][reply_to]" class="block text-gray-300 mb-1">Reply
+                                To</label>
                             <input type="text" placeholder="'Author' <author@ghost.org> [Optional]"
-                                   name="email[<%= index; %>][reply_to]" value="<%= config.reply_to; %>"
+                                   id="email[<%= index; %>][reply_to]" name="email[<%= index; %>][reply_to]"
+                                   value="<%= config.reply_to; %>"
                                    class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 bg-gray-700 text-white">
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="block text-gray-300 mb-1">From</label>
+                            <label for="email[<%= index; %>][from]" class="block text-gray-300 mb-1">From</label>
                             <input type="text" placeholder="'Author' <author@ghost.org>"
+                                   id="email[<%= index; %>][from]"
                                    name="email[<%= index; %>][from]" value="<%= config.from; %>"
                                    class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 bg-gray-700 text-white">
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="block text-gray-300 mb-1">Host</label>
-                            <input type="text" placeholder="smtp.blog.com" name="email[<%= index; %>][host]"
-                                   value="<%= config.host; %>"
+                            <label for="email[<%= index; %>][host]" class="block text-gray-300 mb-1">Host</label>
+                            <input type="text" placeholder="smtp.blog.com"
+                                   id="email[<%= index; %>][host]"
+                                   name="email[<%= index; %>][host]" value="<%= config.host; %>"
                                    class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 bg-gray-700 text-white">
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="block text-gray-300 mb-1">Port</label>
-                            <input type="number" placeholder="587" name="email[<%= index; %>][port]"
-                                   value="<%= config.port; %>"
+                            <label for="email[<%= index; %>][port]" class="block text-gray-300 mb-1">Port</label>
+                            <input type="number" placeholder="587"
+                                   id="email[<%= index; %>][port]"
+                                   name="email[<%= index; %>][port]" value="<%= config.port; %>"
                                    class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 bg-gray-700 text-white">
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="block text-gray-300 mb-1">Auth User</label>
-                            <input type="text" placeholder="Email Username" name="email[<%= index; %>][auth_user]"
-                                   value="<%= config.auth.user; %>"
+                            <label for="email[<%= index; %>][auth_user]" class="block text-gray-300 mb-1">Auth
+                                User</label>
+                            <input type="text" placeholder="Email Username"
+                                   id="email[<%= index; %>][auth_user]"
+                                   name="email[<%= index; %>][auth_user]" value="<%= config.auth.user; %>"
                                    class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 bg-gray-700 text-white">
                         </div>
 
                         <div class="form-group mb-4">
-                            <label class="block text-gray-300 mb-1">Auth Password</label>
-                            <input type="password" placeholder="Email Password" name="email[<%= index; %>][auth_pass]"
-                                   value="<%= config.auth.pass; %>"
+                            <label for="email[<%= index; %>][auth_pass]" class="block text-gray-300 mb-1">Auth
+                                Password</label>
+                            <input type="password" placeholder="Email Password"
+                                   id="email[<%= index; %>][auth_pass]"
+                                   name="email[<%= index; %>][auth_pass]" value="<%= config.auth.pass; %>"
                                    class="shadow appearance-none border border-gray-600 rounded w-full py-2 px-3 bg-gray-700 text-white">
                         </div>
 
