Add correct Title.

--- a/views/dashboard/analytics.ejs
+++ b/views/dashboard/analytics.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Details - Ghosler</title>
+    <title>Analytics - Ghosler</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="/styles/style.css" rel="stylesheet"/>
 </head>
