--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -48,11 +48,17 @@
             position: relative;
             display: block;
             width: 100%;
-            margin: 3em 0;
+            margin: 2em 0;
             padding: 0;
             height: 1px;
             border: 0;
             border-top: 1px solid #e5eff5;
+        }
+
+        .post-content-row li {
+            margin: 0.5em 0;
+            line-height: 1.6em;
+            padding-left: 0.3em;
         }
 
         .post-content-row code {
@@ -62,6 +68,29 @@
             padding: 1px 7px;
             border-radius: 3px;
             color: <%= site.color %>;
+        }
+
+        .post-content-row pre {
+            padding: 20px;
+            overflow: auto;
+            color: #ffffff;
+            line-height: 1.2em;
+            border-radius: 5px;
+            background: #15212A;
+            white-space: pre-wrap;
+            scrollbar-width: none;
+            -ms-overflow-style: none;
+        }
+
+        .post-content-row pre code {
+            padding: 0;
+            color: #ffffff;
+            font-size: 0.9em;
+            background: transparent;
+        }
+
+        .post-content-row pre::-webkit-scrollbar {
+            display: none;
         }
 
         .kg-callout-card {
@@ -128,6 +157,151 @@
         .kg-callout-card-accent a,
         .kg-callout-card-accent .kg-callout-text {
             color: #fff;
+        }
+
+        .kg-bookmark-card {
+            margin: 0 0 1.5em;
+            padding: 0;
+            width: 100%;
+            line-height: 0;
+            background: #ffffff;
+        }
+
+        .kg-bookmark-container {
+            display: flex;
+            min-height: 148px;
+            border: 1px solid #e5eff5;
+            overflow-wrap: anywhere;
+            color: #2fb1ff;
+            text-decoration: none;
+        }
+
+        .kg-bookmark-content {
+            display: inline-block;
+            width: 100%;
+            padding: 20px;
+        }
+
+        .kg-bookmark-title {
+            color: #15212A;
+            font-size: 15px;
+            line-height: 1.5em;
+            font-weight: 600;
+        }
+
+        .kg-bookmark-description {
+            display: -webkit-box;
+            overflow-y: hidden;
+            margin-top: 12px;
+            max-height: 40px;
+            color: #738a94;
+            font-size: 13px;
+            line-height: 1.5em;
+            font-weight: 400;
+            -webkit-line-clamp: 2;
+            -webkit-box-orient: vertical;
+        }
+
+        .kg-bookmark-metadata {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            margin-top: 14px;
+            color: #15212A;
+            font-size: 13px;
+            font-weight: 400;
+        }
+
+        figcaption {
+            text-align: center;
+            font-size: 13px;
+            padding-top: 5px;
+            line-height: 1.5em;
+        }
+
+        figure .kg-bookmark-icon {
+            border: none;
+            -ms-interpolation-mode: bicubic;
+            max-width: 100%;
+            margin: 0 8px 0 0;
+            width: 22px;
+            height: 22px;
+        }
+
+        .kg-bookmark-author {
+            line-height: 1.5em;
+        }
+
+        .kg-bookmark-thumbnail {
+            min-width: 140px;
+            max-width: 180px;
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+            border-radius: 0 2px 2px 0;
+        }
+
+        .kg-bookmark-thumbnail img {
+            border: none;
+            max-width: 100%;
+            display: none;
+            -ms-interpolation-mode: bicubic;
+        }
+
+        .kg-button-card a {
+            overflow-wrap: anywhere;
+            border: solid 1px;
+            border-radius: 5px;
+            box-sizing: border-box;
+            cursor: pointer;
+            display: inline-block;
+            font-size: 14px;
+            font-weight: bold;
+            margin: 0;
+            padding: 12px 25px;
+            text-decoration: none;
+            background-color: <%= site.color %>;
+            color: #FFFFFF;
+        }
+
+        .kg-align-left {
+            text-align: left;
+        }
+
+        .kg-align-center {
+            text-align: center;
+        }
+
+        .kg-toggle-card {
+            background: transparent;
+            border: 1px solid rgba(124, 139, 154, 0.25);
+            border-radius: 4px;
+            padding: 20px;
+            margin-bottom: 1.5em;
+        }
+
+        .kg-toggle-heading-text {
+            text-rendering: optimizeLegibility;
+            line-height: 1.2em;
+            font-size: 1.375rem;
+            font-weight: 600;
+            margin-bottom: 8px;
+            margin-top: 0;
+        }
+
+        .kg-toggle-content {
+            font-size: 1rem;
+            line-height: 1.5;
+            margin-bottom: -1.5em;
+        }
+
+        .kg-toggle-content p {
+            margin: 0 0 1.5em 0;
+            line-height: 1.6em;
+        }
+
+        .kg-toggle-card-icon {
+            display: none;
         }
 
         @media only screen and (max-width: 620px) {
@@ -322,11 +496,36 @@
             table.body hr {
                 margin: 2em 0 !important;
             }
+
+            .kg-bookmark-card {
+                width: 90vw;
+            }
+
+            .kg-bookmark-thumbnail {
+                display: none !important;
+            }
+
+            .kg-bookmark-metadata span {
+                font-size: 13px !important;
+            }
+
+            .kg-embed-card {
+                max-width: 90vw !important;
+            }
         }
 
         @media all {
             .subscription-details p.user-subscription-name-field {
                 display: none !important;
+            }
+
+            .apple-link a {
+                color: inherit !important;
+                font-family: inherit !important;
+                font-size: inherit !important;
+                font-weight: inherit !important;
+                line-height: inherit !important;
+                text-decoration: none !important;
             }
 
             #MessageViewBody a {
