--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -285,8 +285,7 @@
             line-height: 1.2em;
             font-size: 1.375rem;
             font-weight: 600;
-            margin-bottom: 8px;
-            margin-top: 0;
+            margin: 0 0 0.5em 0;
         }
 
         .kg-toggle-content {
@@ -306,6 +305,7 @@
 
         .post-content-row .kg-video-container {
             width: 100%;
+            overflow: hidden;
             position: relative;
             border-radius: 5px;
         }
@@ -313,21 +313,6 @@
         .post-content-row .kg-video-container img {
             width: 100%;
             display: block;
-        }
-
-        .video-play-icon {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            height: 2em;
-            width: 3em;
-            margin: 0 auto;
-            border-radius: 10px;
-            padding: 1em 0.8em 0.6em 1em;
-            font-size: 1em;
-            background-color: rgba(0, 0, 0, 0.85);
-            cursor: pointer;
         }
 
         .video-play-arrow {
@@ -455,7 +440,8 @@
             width: 100%;
             padding-left: 12px;
             padding-top: 2px;
-            font-size: 15px;
+            padding-bottom: 2px;
+            font-size: 12px;
             line-height: 1.4em;
             overflow-wrap: anywhere;
             text-decoration: none;
@@ -494,7 +480,6 @@
             border: none;
             height: 24px;
             width: 24px;
-            margin-top: 6px;
             max-width: 24px;
             -ms-interpolation-mode: bicubic;
             background-color: <%= site.color; %>;
@@ -510,6 +495,62 @@
             right: 0;
             bottom: 0;
             left: 0;
+        }
+
+        .kg-video-preview {
+            mso-hide: all;
+            display: block;
+            border-radius: 5px;
+            overflow: hidden;
+            overflow-wrap: anywhere;
+            background-color: #1d1f21;
+            color: <%= site.color; %>;
+            text-decoration: none;
+            background-image: radial-gradient(circle at center, #5b5f66, #1d1f21);
+        }
+
+        .kg-video-play-button {
+            height: 2em;
+            width: 3em;
+            margin: 0 auto;
+            border-radius: 10px;
+            padding: 1em 0.8em 0.6em 1em;
+            font-size: 1em;
+            background-color: rgba(0, 0, 0, 0.85);
+            mso-hide: all;
+        }
+
+        .twitter-tweet p {
+            font-size: 1em;
+            margin: 0.8em 0;
+            line-height: 1.6em;
+        }
+
+        .twitter-tweet a {
+            margin: 0 1.5px;
+            overflow-wrap: anywhere;
+            color: <%= site.color; %>;
+            text-decoration: underline;
+        }
+
+        .kg-image-card {
+            padding: 0;
+            margin: 0 0 1.5em;
+        }
+
+        /* for image cards if they have captions */
+        .kg-image-card-caption {
+            text-align: center;
+            font-size: 13px;
+            padding-top: 5px;
+            line-height: 1.5em;
+        }
+
+        .kg-image-card-caption a {
+            margin: 0 1.5px;
+            overflow-wrap: anywhere;
+            color: <%= site.color; %>;
+            text-decoration: underline;
         }
 
         @media only screen and (max-width: 620px) {
