Misc improvements as per Ghost's logic.

--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -212,6 +212,7 @@
             font-weight: 400;
         }
 
+        /* this is converted to a div post inlining */
         figcaption {
             text-align: center;
             font-size: 13px;
@@ -219,6 +220,7 @@
             line-height: 1.5em;
         }
 
+        /* this (figure) is converted to a div post inlining */
         figure .kg-bookmark-icon {
             border: none;
             -ms-interpolation-mode: bicubic;
