--- a/views/dashboard/details.ejs
+++ b/views/dashboard/details.ejs
@@ -110,7 +110,7 @@
                         <% const clicks = element[link]; %>
                         <td class=" px-6 py-4">
                             <a href="<%= link; %>" target="_blank"
-                               class="text-blue-400 hover:text-blue-500"><%= link; %></a></td>
+                               class="text-blue-400 hover:text-blue-500"><%= link.split(/[?#]/)[0]; %></a></td>
                         <td class="px-6 py-4"><%= clicks; %></td>
                     </tr>
                 <% }); %>
@@ -124,8 +124,8 @@
                 <div class="bg-gray-800 rounded-lg shadow-md p-4 mb-4">
                     <% const link = Object.keys(element)[0]; %>
                     <% const clicks = element[link]; %>
-                    <a href="<%= link.split(/[?#]/)[0]; %>" target="_blank"
-                       class="font-semibold text-blue-400 hover:text-blue-500 block mb-2 truncate"><%= link; %></a>
+                    <a href="<%= link; %>" target="_blank"
+                       class="font-semibold text-blue-400 hover:text-blue-500 block mb-2 truncate"><%= link.split(/[?#]/)[0]; %></a>
                     <hr class="border-t border-gray-600 my-2">
                     <div class="flex justify-between items-center">
                         <span class="text-gray-300">Clicks:</span>
