Add style content to <style> tag for global use.

--- a/views/newsletter.ejs
+++ b/views/newsletter.ejs
@@ -174,6 +174,8 @@
             overflow-wrap: anywhere;
             color: <%= site.color; %>;
             text-decoration: none;
+            border-radius: 5px;
+            overflow: hidden;
         }
 
         .kg-bookmark-content {
