Convert to a one-liner.

--- a/views/dashboard/details.ejs
+++ b/views/dashboard/details.ejs
@@ -94,11 +94,7 @@
         <p class="font-semibold text-center text-gray-400 my-6">URLs are tracked and incremented<br>every time they are
             clicked.</p>
 
-        <% post.stats.postContentTrackedLinks.sort((a, b) => {
-            const clicksA = Object.values(a)[0];
-            const clicksB = Object.values(b)[0];
-            return clicksB - clicksA;
-        }); %>
+        <% post.stats.postContentTrackedLinks.sort((a, b) => Object.values(b)[0] - Object.values(a)[0]); %>
 
         <!-- Desktop Table -->
         <div class="hidden md:block overflow-x-auto rounded-lg">
