--- a/views/dashboard/password.ejs
+++ b/views/dashboard/password.ejs
@@ -15,7 +15,7 @@
         <ul class="flex">
             <li><a href="/" class="hover:text-white">Home</a></li>
             <li><span class="mx-2">></span></li>
-            <li>Settings</li>
+            <li><a href="/settings" class="hover:text-white">Settings</a></li>
             <li><span class="mx-2">></span></li>
             <li>Profile Password</li>
         </ul>
